--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,24 @@
-h2{
-    color: red;
+* {
+    margin: 0;
+    padding: 0;
+}
+h1 {
+    color:red;
+    font-style: italic;
+    font-weight: lighter;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-decoration: overline;
+    font-size: 80px;
+    text-align: center;
+}
+#heading-parent{
+    background-color: rgb(28, 10, 4);
+    height: 600px;
+    padding: 100px 0px;
+    width: 1100px;
+    /* margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: auto;
+    margin-right: auto; */
+    margin: 30px auto;
 }
